--- a/package.json
+++ b/package.json
@@ -18,27 +18,28 @@
         "tailwind.config.js"
     ],
     "dependencies": {
-        "@headlessui/vue": "^1.7.7",
+        "@headlessui/vue": "^1.7.12",
         "@heroicons/vue": "^2.0.13",
+        "@vueuse/components": "^9.10.0",
+        "@vueuse/core": "^9.10.0",
         "animate.css": "^4.1.1",
         "core-js": "^3.27.1",
         "date-fns": "^2.29.3",
         "lodash": "^4.17.21",
         "pinia": "^2.0.28",
+        "sass": "^1.57.1",
         "uuid": "^9.0.0",
         "vee-validate": "^4.7.3",
         "vue": "^3.2.45",
         "vue-i18n": "^9.2.2",
         "vue-router": "^4.1.6",
-        "@vueuse/components": "^9.10.0",
-        "vue-tippy": "^6.0.0",
-        "@vueuse/core": "^9.10.0",
-        "sass": "^1.57.1"
+        "vue-tippy": "^6.0.0"
     },
     "devDependencies": {
         "@intlify/vite-plugin-vue-i18n": "^3.4.0",
         "@rushstack/eslint-patch": "^1.2.0",
-        "@types/node": "^16.11.26",
+        "@types/node": "^16.18.23",
+        "@types/youtube": "^0.0.47",
         "@vitejs/plugin-vue": "^2.3.3",
         "@vue/eslint-config-prettier": "^7.0.0",
         "@vue/eslint-config-typescript": "^11.0.2",
