--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "pinia": "^2.0.28",
         "sass": "^1.57.1",
         "uuid": "^9.0.0",
+        "v-viewer": "^3.0.11",
         "vee-validate": "^4.7.3",
         "vue": "^3.2.45",
         "vue-i18n": "^9.2.2",
