--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "private": false,
     "scripts": {
         "dev": "vite",
-        "serve": "vite preview --port 5050",
+        "preview": "vite preview --port 5050",
         "build": "vue-tsc --noEmit && vite build",
         "typecheck": "vue-tsc --noEmit",
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
@@ -41,6 +41,7 @@
         "@rushstack/eslint-patch": "^1.2.0",
         "@types/node": "^16.18.23",
         "@types/youtube": "^0.0.47",
+        "@types/jsdom": "^16.2.14",
         "@vitejs/plugin-vue": "^2.3.3",
         "@vue/eslint-config-prettier": "^7.0.0",
         "@vue/eslint-config-typescript": "^11.0.2",
